Fixing Tap Splash on Ios

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,3 +1,8 @@
+* {
+    -webkit-backface-visibility: hidden;
+    -webkit-tap-highlight-color: transparent;
+}
+
 html {
     background-color: #d4d4d4;
     display: flex;
